Add playing flops to hands, reworking how CommunityCards are used in Hand